# IX

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  runner.py  server.py
agent/: .gitkeep  genesis1.ix  genesis2.ix
core/: __init__.py  ix_parser.py
docs/: COGNITION_CONTRACT_UPGRADE.md  DEVELOPER_VALIDATION.md  HANDBOOK.md  LANGUAGE_REFERENCE.md  QUICKSTART.md  SAFETY_MODEL.md  TRACE_SCHEMA.md  design.md  language_spec.md  roadmap.md  spec.md
engine/: ix_engine.py  test_engine.py
examples/: README.md  assurance_ready.ix  branching_review.ix  cognitionkernel_wave6_contract.ix  cognitionkernel_wave6_missing_obligations.ix  cognitionkernel_wave6_noncanonical_falsification.ix  cognitionkernel_wave6_overclaiming.ix  cognitionkernel_wave6_wrong_handoff.ix  conditional_logic.ix  conditions.ix  functions.ix  governed_tool.ix  hello.ix  hello_bot.ix  loops.ix  math_demo.ix  multi_agent_review.ix  recursion.ix  run_hello.py
interpreter/: .gitkeep  comms.py  evolver.py  ix_runtime.py  main.py  self_improve.py
ix/: __init__.py  __main__.py  assurance.py  ast.py  cli.py  cognition.py  errors.py  evidence.py  formatting.py  parser.py  runtime.py  tools.py  tracing.py  validator.py  version.py
src/: parser.py  runtime.py
tests/: test_ix_assurance.py  test_ix_assurance_profiles.py  test_ix_canonical_parser.py  test_ix_cli.py  test_ix_cli_commands.py  test_ix_cli_format_and_test.py  test_ix_cognition_assurance_profile.py  test_ix_cognition_ast.py  test_ix_cognition_canonical_example.py  test_ix_cognition_cli_regression.py  test_parser.py  (+17 more)
(+6 files in other folders)
