[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ix-agent-language"
version = "0.1.0"
description = "Experimental evidence-bound agent contract language and runtime."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Bryce Lovell" }
]
keywords = [
  "agent-language",
  "ai-agents",
  "auditability",
  "dsl",
  "governance",
  "runtime-assurance",
  "traceability"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Interpreters",
  "Topic :: Software Development :: Libraries :: Application Frameworks"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/BryceWDesign/IX"
Repository = "https://github.com/BryceWDesign/IX"
Issues = "https://github.com/BryceWDesign/IX/issues"

[project.scripts]
ix = "ix.cli:main"

[tool.setuptools]
packages = ["ix"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
